added sub array

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "C_Cpp.errorSquiggles": "disabled",
     "cSpell.words": [
         "linkedlist"
-    ]
+    ],
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
